--- a/templates/home.html
+++ b/templates/home.html
@@ -3,5 +3,7 @@
 Home
 {% endblock %}
 {% block content %}
-<p> "Welcome to EdrMedeso API Suite!"</p>
+<div class="container">
+    <p> "Welcome to EdrMedeso API Suite!"</p>
+</div>
 {% endblock %}
