--- a/templates/examples.html
+++ b/templates/examples.html
@@ -3,29 +3,39 @@
 Examples
 {% endblock %}
 {% block content %}
-<p>
-    <pre>
-    import requests
-    <font color="blue">&nbsp;&nbsp;#Setting base parameters!</font>
-    url_adr = "http://127.0.0.1:80001/"
-    headers = {'Content-Type': 'application/json'}
-    
-    <font color="blue">&nbsp;&nbsp;#First Get token. You need to provide username and password</font>
-    url = url_adr+'getToken'
-    payload = "{\"username\":\"testUser\",\"password\":\"password\"}"
-    response = requests.request("GET", url, headers=headers, data = payload)
-    
-    <font color="blue">&nbsp;&nbsp;#Save the token</font>
-    token = response.text
-    
-    <font color="blue">&nbsp;&nbsp;#Sending data to the module. You need to provide molule name and component ID with the data</font>
-    url = url_adr+'inputData'+'?token='+token
-    payload = "{\"componentId\": \"002c4b26-6322-4f81-bf82-60d7602d9904\",\"destinationModule\": \"SimpleMaths\",\"data\": {\"number1\": 12,\"number2\": 14}}"
-    response = requests.request("POST", url, headers=headers, data = payload)
-    
-    <font color="blue">&nbsp;&nbsp;#Getting the result</font>
-    url = url_adr+'GetData'+'?token='+token
-    response = requests.request("GET", url, headers=headers, data = payload)
-    </pre>
-</p>
+    <div class="container-fluid">
+        <br>
+
+        <dl>
+            <dt>The steps for submiting requests</dt>
+                <dd>- Get token, using username and password</dd>
+                <dd>- send the token with the desired request</dd>
+        </dl>
+
+        <p>
+            <pre>
+            import requests
+            <font color="blue">&nbsp;&nbsp;#Setting base parameters!</font>
+            base_url = "https://edrmedesoapiservice.azurewebsites.net/"
+            headers = {'Content-Type': 'application/json'}
+            
+            <font color="blue">&nbsp;&nbsp;#First Get token. You need to provide username and password</font>
+            url = base_url+'getToken'
+            payload = "{\"username\":\"testUser\",\"password\":\"password\"}"
+            response = requests.request("GET", url, headers=headers, data = payload)
+            
+            <font color="blue">&nbsp;&nbsp;#Save the token</font>
+            token = response.text
+            
+            <font color="blue">&nbsp;&nbsp;#Sending data to the module. You need to provide molule name and component ID with the data</font>
+            url = base_url+'inputData'+'?token='+token
+            payload = "{\"componentId\": \"002c4b26-6322-4f81-bf82-60d7602d9904\",\"destinationModule\": \"SimpleMaths\",\"data\": {\"number1\": 12,\"number2\": 14}}"
+            response = requests.request("POST", url, headers=headers, data = payload)
+            
+            <font color="blue">&nbsp;&nbsp;#Getting the result</font>
+            url = base_url+'GetData'+'?token='+token
+            response = requests.request("GET", url, headers=headers, data = payload)
+            </pre>
+        </p>
+    </div>
 {% endblock %}
