--- a/templates/user.html
+++ b/templates/user.html
@@ -3,6 +3,7 @@
 User
 {% endblock %}
 {% block content %}
+<div class="container">
     {% with messages = get_flashed_messages() %}
         {% if messages %}  
             {% for msg in messages %}
@@ -10,5 +11,7 @@ User
             {% endfor %}
         {% endif %}
     {% endwith %} 
-<p>Welcome, {{user}}</p>
+    <h1>{{user}}</h1>
+    <h1>Welcome to EdrMedeso API Suite!</h1>
+</div>
 {% endblock %}
