updated from dev

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,6 @@ Home
 {% endblock %}
 {% block content %}
 <div class="container">
-    <p> "Welcome to EdrMedeso API Suite!"</p>
+    <h1> "Welcome to EdrMedeso API Suite!"</h1>
 </div>
 {% endblock %}
