--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,20 +1,75 @@
 {% extends "bootstrap/base.html" %}
 {% block navbar  %}
-        <nav class="navbar navbar-expand-sm navbar-light bg-info">
-            <span class="navbar-brand" href="#">Navbar</span>
-            <ul class = "nav navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-item nav-link" href="{{url_for('examples')}}">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-item nav-link" href="{{url_for('examples')}}">Examples</a>
-                </li>
-                <li class="nav-item navbar-right">
-                    <a class="nav-item nav-link" href="{{url_for('logout')}}"><strong>Logout</strong></a>
-                </li>                                                 
+<nav class="navbar navbar-expand-sm navbar-light bg-info py-2">
+    <span class="navbar-brand" href="#"></span>
+    <ul class = "nav navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link active" href="{{url_for('home')}}">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-item nav-link" href="{{url_for('examples')}}">Features</a>
+        </li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documentation <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+            <li><a href="#">Requirements</a></li>
+            <li><a href="#">API service</a></li>
+            <li><a href="#">Upcoming features</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Weld fatigue</a></li>
+            <li class="divider"></li>
+            <li><a href="#">BayesianInference</a></li>
             </ul>
-        </nav>        
+        </li>        
+        <li class="nav-item">
+            <a class="nav-item nav-link" href="{{url_for('home')}}">Account</a>
+        </li>
+        <li class="nav-item navbar-right">
+            {% if session['logged_in'] %} 
+                <a class="nav-item nav-link" href="{{url_for('logout')}}"><strong>Logout</strong></a>
+            {% else %}
+                <a class="nav-item nav-link" href="{{url_for('login')}}"><strong>Login</strong></a>
+            {% endif %}
+        </li>                                                 
+    </ul>
+</nav> 
+        <div class="col-lg-1 col-sm-4 sidebar bg-light d-md-block d-none">
+            <div class="sidebar-container mt-4 mx-2 top-0">
+                <div class="d-flex direction:column justify-content-start">
+                    <h4 class="text-capitalize py-2"></h4>
+                   <ul class="nav flex-column subjects">
+                        <li class="subject" data-subject="english">
+                            <h5 class="subject-title mb-1">Modules</h5>
+
+                            <li><a href="#">Weld Fatigue</a></li>
+                            <li><a href="#">Bayesian Inference</a></li>
+                        </li>
+                        <li class="subject" data-subject="english">
+                            <h5 class="subject-title mb-1">Examples</h5>
+
+                            <li><a href="{{url_for('examples')}}">Examples 1</a></li>
+                            <li><a href="#">Home 5</a></li>
+                            <li><a href="#">Home 3</a></li>
+                        </li>
+                        <li class="subject" data-subject="english">
+                            <h5 class="subject-title mb-1">Coming Features</h5>
+
+                            <li><a href="#">Home 1</a></li>
+                            <li><a href="#">Home 5</a></li>
+                            <li><a href="#">Home 3</a></li>
+                        </li>
+                    </ul>
+                   
+                </div>
+            </div>
+        </div>
+
+     <!-- <div class="col-lg-9 col-sm-8 content-container">
+        <div class="row h-100">
+          <div class="col-lg-9 col-md-9 col-sm-12 main-container"></div>
+          <div class="col-lg-3 col-md-3 d-none d-md-block announcement-container">uwu</div>
+        </div>
+      </div>-->
+    </div>
+  </div>       
 {% endblock %}  
